# accelerator-simulation

./: main.py  numeric_calculation.py  pyproject.toml  xou.py  xoufile_to_csv.py
eou/: electrode.EOU
field_csv/: electrode.csv
src/: numeric_calculation.py  xou.py
