[tool.poetry]
name = "accelerator-simulation"
version = "0.1.0"
description = ""
authors = ["ORyomei <o.ryomei1020@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8"
numpy = "^1.20.3"
matplotlib = "^3.4.2"
scipy = "^1.7.0"

[tool.poetry.dev-dependencies]
yapf = "0.30.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
